boreal/tests/assets/invalid_files/compilation/invalid_identifier_type3.yar
import "pe"

rule c {
    condition:
        pe.sections.foo == /aab/
}
